# octo-vista-api-x-mcp-server-example

./: .cursorrules.example  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  .mise.toml  .pre-commit-config.yaml  .tflint.hcl  .trivyignore  README.md  claude_desktop_config.http.example.json  env.example  http_server.py  pyproject.toml  requirements.txt  run.py  server.py  test_deterministic_hash.py  test_redis_integration.py
.cursor/: mcp.json
.cursor/rules/: dependencies.mdc  development-workflow.mdc  healthcare-data.mdc  mcp-tools.mdc  project-structure.mdc  python-standards.mdc
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yml  setup.sh
docs/: ARCHITECTURE.md  AWS_CACHING_DEPLOYMENT.md  CLIENT_SETUP.md  DATA_MODELS.md  DEPLOYMENT.md  DEVCONTAINER.md  DEVELOPMENT.md  LOCAL_DEVELOPMENT_CACHE.md  LOCATION_MAPPING_CITATIONS.md  LOGGING.md  PROMPTS.md  README.md  SETUP.md  TESTING.md  TEST_DATA.md  TOOLS.md  TRANSPORTS.md  TROUBLESHOOTING.md  redis-setup.md
mock_server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  logging.yaml  pyproject.toml
mock_server/config/: auth_applications.json
mock_server/docs/: API.md  jwt-structure-comparison.md
mock_server/keys/: .gitkeep  private_key.pem  public_key.pem
mock_server/localstack/: dynamodb-seed-limited.json  dynamodb-seed-wildcard.json  dynamodb-seed.json  init-aws.sh
mock_server/scripts/: generate_rsa_keys.py  setup.sh
mock_server/src/: config.py  main.py
mock_server/src/auth/: jwt_handler.py  jwt_handler_vamf.py  models.py  models_vamf.py  resource.py  token_parsers.py
mock_server/src/data/: _VistARawSheba.json  appointments.py  clinical_data.py  facilities.py  providers.py  test_patients.py
mock_server/src/database/: dynamodb_client.py
mock_server/src/exceptions/: handlers.py
mock_server/src/middleware/: auth_filter.py
mock_server/src/rpc/: authorization.py  models.py  resource.py
mock_server/src/rpc/handlers/: admin_handlers.py  clinical_handlers.py  ddr_handlers.py  patient_handlers.py  system_handlers.py
mock_server/tests/: test_integration.py  test_patient_handlers.py
scripts/: auto_setup.py  check_mock_server.py  clean.py  dev_with_mock.py  diagnose_windows.py  first_time_setup.py  init_mock_db.py  mock-server.ps1  setup.py  setup_claude_desktop.py  silent_setup.py  start_local_cache.py  start_mock_if_needed.py  test_mcp_client.py  test_mock_rpc.py  test_patient_tools_valid_dfn.py  test_redis.py  test_single_patient_tool.py  test_vista_config.py  test_vpr_rpc.py  test_vpr_with_curl.sh
src/: __init__.py  __main__.py  config.py  logging_config.py  models.py  parsers.py  prompts.py  resources.py  utils.py
src/api_clients/: __init__.py  base.py  jwt_utils.py  vista_client.py
src/middleware/: __init__.py  auth_middleware.py
src/models/: __init__.py  utils.py
src/models/base/: __init__.py  common.py
src/models/patient/: __init__.py  allergy.py  appointment.py  base.py  clinical.py  collection.py  cpt_code.py  demographics.py  diagnosis.py  document.py  health_factor.py  medication.py  order.py  patient.py  pov.py  problem.py  treatment.py  visits.py
src/models/responses/: __init__.py  metadata.py  tool_responses.py
src/models/vista/: __init__.py  admin.py  clinical.py  patient.py
src/services/cache/: __init__.py  base.py  dax.py  elasticache.py  factory.py  json_encoder.py  local_cache_manager.py  local_dev.py  local_dev_redis.py  memory.py  multi_tier.py  redis.py
src/services/data/: __init__.py  patient_data.py
src/services/filters/: __init__.py  consult_filters.py  date_filters.py  lab_filters.py  vital_filters.py
src/services/formatters/: __init__.py  clinical_formatters.py  demographic_formatters.py  location_mapper.py  status_formatters.py
src/services/parsers/: __init__.py
src/services/parsers/mappings/: __init__.py  clinical_mappings.json  mapping_loader.py  medication_mappings.json
src/services/parsers/patient/: __init__.py  (+3 more)
src/services/rpc/: __init__.py  executor.py  parameter_builder.py  response_builder.py
src/services/validators/: __init__.py  clinical_validators.py  cpt_code_lookup.py  cpt_validators.py  health_factor_config.json  treatment_validators.py  vista_validators.py
src/tools/: __init__.py  admin.py  clinical.py  patient.py  system.py
src/tools/admin/: __init__.py  admin.py
src/tools/clinical/: __init__.py  clinical.py
src/tools/patient/: __init__.py  base.py  get_items_by_uid_tool.py  get_patient_allergies_tool.py  get_patient_appointments_tool.py  get_patient_consults_tool.py  get_patient_diagnoses_tool.py  get_patient_documents.py  get_patient_health_factors_tool.py  get_patient_labs_tool.py  get_patient_medications_tool.py  get_patient_orders.py  get_patient_povs_tool.py  get_patient_problems_tool.py  get_patient_procedures.py  get_patient_treatments_tool.py  get_patient_visits_tool.py  get_patient_vitals_tool.py  patient.py  search_patients_tool.py  visit_tool.py
src/tools/system/: __init__.py  system.py
src/vista/: base.py  client.py  context_aware_client.py
src/vista/auth/: jwt.py
tests/: README.md  __init__.py  conftest.py  test_datetime_parser.py  test_filters.py  test_integration.py  test_jwt_utils.py  test_patient_models.py  test_value_parser.py  test_vista_client_token_refresh.py
tests/integration/: test_cpt_tool.py  test_diagnosis_tool.py  test_documents_tool.py  test_health_factor_tool.py  test_integration.py  test_medication_tool.py  test_orders_tool.py  test_problems_tool.py  test_treatment_tool.py  test_visit_tool.py
tests/services/: test_jwt_utils.py  test_vista_client_token_refresh.py
tests/unit/: test_cpt_parsing.py  test_datetime_parser.py  test_diagnosis_parsing.py  test_health_factor_parsing.py  test_json_encoder.py  test_location_mapper.py  test_mapping_system.py  test_medication_parsing.py  test_pagination_simple.py  test_patient_demographics.py  test_pov_parsing.py  test_problem_parsing.py  test_resolve_vista_context.py  test_treatment_model.py  test_treatment_status.py  test_value_parser.py  test_visit_models.py
(+2 files in other folders)
