[project]
name = "octo-vista-api-x-mcp-server"
version = "1.0.0"
description = "MCP server for Vista API X - Access VistA healthcare data through natural language"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.10.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.3.0",
    "typing-extensions>=4.8.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "sse-starlette>=2.0.0",
    "cryptography>=44.0.0",
    "python-jose[cryptography]>=3.3.0",
    "boto3>=1.35.0",
    "redis[hiredis]>=5.0.0",
    "jsonpath-ng>=1.7.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
    "types-cachetools>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (including unused imports)
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"] # Line too long - handled by black
fixable = ["ALL"]
unfixable = []

[tool.mypy]
python_version = "3.12"
files = ["src/**/*.py", "*.py", "scripts/*.py", "tests/**/*.py"]
exclude = [
    "build/",
    "dist/",
    ".venv/",
    ".git/",
    "__pycache__/",
    ".*\\.egg-info/",
    ".mypy_cache/",
    ".pytest_cache/",
    ".ruff_cache/",
    "mock_server/",
]
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true
# Start with less strict settings
allow_redefinition = true
allow_untyped_globals = true
implicit_reexport = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "sse_starlette.*",
    "jose.*",
    "mcp.*",
    "cachetools.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scripts.*", "tests.*"]
ignore_errors = true              # Be less strict with test/script files
